--- a/msg/install.txt
+++ b/msg/install.txt
@@ -3,3 +3,5 @@ When uninstalling this plugin, it will swith back to English.
 
 请使用主菜单的 帮助/Language 子菜单来切换语言。 目前支持 简体中文 繁体中文 日本語。 
 要换回英语不需要卸载本插件，请直接从菜单切换英文。
+
+现在带有三个版本的翻译文件，分别用于支持3104之前的版本，3105-3114之间的版本，以及3118之后的最新版本。
