--- a/msg/install.txt
+++ b/msg/install.txt
@@ -1,12 +1,12 @@
-Swith between language in Main Menu Help/Language/
-When uninstalling this plugin, it will swith back to English.
+Switch between language in Main Menu Help/Language/
+When uninstalling this plugin, it will switch back to English.
 
-请使用主菜单的 帮助/Language 子菜单来切换语言。 目前支持 简体中文 繁体中文 日本語。 
+请使用主菜单的 帮助/Language 子菜单来切换语言。 目前支持 简体中文 繁体中文 日本語 法语 俄语等。 
 要换回英语不需要卸载本插件，请直接从菜单切换英文。
 
 现在带有多个版本的翻译文件，可以支持Sublime Text 3的各个版本。
 
-請使用主選單的 說明/Language 子選單來切換語言。 目前支援 簡體中文 正體中文 日本語。 
+請使用主選單的 說明/Language 子選單來切換語言。 目前支援 簡體中文 正體中文 日本語 法語 俄語等。 
 要換回英文不需要移除本外掛程式，請直接從選單切換成英文。
 
 現在帶有多個版本的翻譯檔案，可以支援Sublime Text 3的各個版本。
